feat: add Spring AI Gemini integration and sync project rules
- Add Spring AI Google Gemini dependency to build.gradle
- Configure Gemini API settings in application.properties
- Sync .cursor/rules with README.md (Java 21, Spring Boot 4.0.1)
- Update project overview with alarm/timer features
- Update performance metrics and success criteria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=selfdevleop-backend-prepare
+
+# Spring AI - Google Gemini Configuration
+spring.ai.google.gemini.api-key=${GEMINI_API_KEY}
+spring.ai.google.gemini.model=gemini-2.5-flash-lite
+spring.ai.google.gemini.chat.options.temperature=0.8
+spring.ai.google.gemini.chat.options.top-p=0.9
