--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,28 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
+}
+
+// Spring AI BOM (Bill of Materials) for version management
+ext {
+	springAiVersion = '1.0.0'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+	}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	
+	// Spring AI - Google Gemini
+	implementation 'org.springframework.ai:spring-ai-google-gemini-spring-boot-starter'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
